--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,48 @@
-# Google App Engine generated folder
-appengine-generated/
+# OS files
+.DS_Store
+Thumbs.db
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Logs
+logs/
+*.log
+logs/*.log
+
+# Build output
+dist/
+build/
+out/
+.cache/
+.next/
+.nuxt/
+coverage/
+
+# Python
+__pycache__/
+*.py[cod]
+*.sqlite3
+.venv/
+env/
+venv/
+
+# IDE / Editor
+.vscode/
+.idea/
+*.swp
+
+# Misc
+*.pid
+*.seed
+*.tar.gz
+*.zip
